--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+  <div class="buttons">
+    <button class="button rock">rock</button>
+    <button class="button paper">paper</button>
+    <button class="button scissors">scissors</button>
+  </div>
 
   <script src="script.js"></script>
 </body>
