Create basic game and score layout

--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
 </head>
 
 <body>
-  <div class="buttons">
-    <button class="button rock">rock</button>
-    <button class="button paper">paper</button>
-    <button class="button scissors">scissors</button>
+  <div class="round">Round 2</div>
+
+  <div class="computer">
+    <div class="text">computer</div>
+    <div class="score">1</div>
+    <button class="rock">rock</button>
+    <button class="paper">paper</button>
+    <button class="scissors">scissors</button>
+  </div>
+
+  <div class="score">0</div>
+
+  <div class="player">
+    <button class="rock">rock</button>
+    <button class="paper">paper</button>
+    <button class="scissors">scissors</button>
+    <div class="score">1</div>
+    <div class="text">player</div>
   </div>
 
   <script src="script.js"></script>
