Rename element attributes

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
   <div class="player">
     <div class="player-buttons">
-      <button class="rock">rock</button>
-      <button class="paper">paper</button>
-      <button class="scissors">scissors</button>
+      <button class="player-btn rock">rock</button>
+      <button class="player-btn paper">paper</button>
+      <button class="player-btn scissors">scissors</button>
     </div>
   </div>
 
