Add id attributes for scores

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <th class="score-header">player</th>
     </tr>
     <tr class="score-row">
-      <td class="score-data" id="score-computer"></td>
-      <td class="score-data" id="score-tie"></td>
-      <td class="score-data" id="score-player"></td>
+      <td class="score-data" id="score-computer">0</td>
+      <td class="score-data" id="score-tie">0</td>
+      <td class="score-data" id="score-player">0</td>
     </tr>
   </table>
   </div>
