Add new class for computer buttons

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
   <div class="computer">
     <div class="computer-buttons">
-      <button class="rock">rock</button>
-      <button class="paper">paper</button>
-      <button class="scissors">scissors</button>
+      <button class="computer-btn rock">rock</button>
+      <button class="computer-btn paper">paper</button>
+      <button class="computer-btn scissors">scissors</button>
     </div>
   </div>
 
