Add visual feedback for computer and player selections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="round"></div>
+  <div class="round">start</div>
   <table class="score">
     <tr class="score-row">
       <th class="score-header">computer</th>
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div class="result"></div>
+  <div class="commentary">choose your weapon</div>
 
   <div class="player">
     <div class="player-buttons">
