Minor change to placeholder text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div class="commentary">choose your weapon</div>
+  <div class="message">choose your weapon</div>
 
   <div class="player">
     <div class="player-buttons">
