Add HTML element and rename classes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="round">start</div>
+  <div class="message-top">start</div>
   <table class="score">
     <tr class="score-row">
       <td class="score-data" id="score-computer">0</td>
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div class="message">choose your weapon</div>
+  <div class="message-middle">choose your weapon</div>
 
   <div class="player">
     <div class="player-buttons">
@@ -42,6 +42,8 @@
       <button class="player-btn scissors">scissors</button>
     </div>
   </div>
+
+  <div class="message-middle">choose your weapon</div>
 
   <script src="script.js"></script>
 </body>
