Update README and upload screenshots

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="message-top">win 5 rounds</div>
+  <div class="message-top">play 5 rounds</div>
   <table class="score">
     <tr class="score-row">
       <td class="score-data" id="score-computer">0</td>
