--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-  <div class="message-middle">choose your weapon</div>
+  <div class="message-bottom">choose your weapon</div>
 
   <script src="script.js"></script>
 </body>
