Remove message-top to simplify interface and UX

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="message-top">play 5 rounds</div>
+  <!-- <div class="message-top">play 5 rounds</div> -->
   <table class="score">
     <tr class="score-row">
       <td class="score-data" id="score-computer">0</td>
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div class="message-middle">start</div>
+  <div class="message-middle">...</div>
 
   <div class="player">
     <div class="player-buttons">
