Add button icons

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
   <div class="player">
     <div class="player-buttons">
-      <button class="player-btn rock">rock</button>
-      <button class="player-btn paper">paper</button>
-      <button class="player-btn scissors">scissors</button>
+      <button class="player-btn rock"><img width="40" height="40" src="./images/rock.svg"></button>
+      <button class="player-btn paper"><img width="32" height="32" src="./images/paper.svg"></button>
+      <button class="player-btn scissors"><img width=" 40" height="40" src="./images/scissors2.svg"></button>
     </div>
   </div>
 
