--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
   <div class="computer">
     <div class="computer-buttons">
-      <button class="computer-btn rock">rock</button>
-      <button class="computer-btn paper">paper</button>
-      <button class="computer-btn scissors">scissors</button>
+      <button class="computer-btn rock"><img width="40" height="40" src="./images/rock.svg"></button>
+      <button class="computer-btn paper"><img width="32" height="32" src="./images/paper.svg"></button>
+      <button class="computer-btn scissors"><img width=" 40" height="40" src="./images/scissors.svg"></button>
     </div>
   </div>
 
@@ -38,7 +38,7 @@
     <div class="player-buttons">
       <button class="player-btn rock"><img width="40" height="40" src="./images/rock.svg"></button>
       <button class="player-btn paper"><img width="32" height="32" src="./images/paper.svg"></button>
-      <button class="player-btn scissors"><img width=" 40" height="40" src="./images/scissors2.svg"></button>
+      <button class="player-btn scissors"><img width="40" height="40" src="./images/scissors.svg"></button>
     </div>
   </div>
 
