--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 
   <div class="message-bottom">choose your weapon</div>
 
+  <!-- Sound Effects -->
+  <audio id="audioBGSwitch" src=" ./sounds/mixkit-arcade-game-jump-coin-216.wav"></audio>
+  <audio id="audioNoWinner" src="./sounds/mixkit-click-melodic-tone-1129.wav"></audio>
+  <audio id="audioButtonOn" src="./sounds/mixkit-gear-fast-lock-tap-2857.wav"></audio>
+  <audio id="audioButtonOn2" src="./sounds/mixkit-gear-metallic-lock-sound-2858.wav"></audio>
+  <audio id="audioComputerWin" src="./sounds/mixkit-opening-software-interface-2578.wav"></audio>
+  <audio id="audioPlayerWin" src="./sounds/mixkit-video-game-retro-click-237.wav"></audio>
+
   <script src="script.js"></script>
 </body>
 
