--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <td class="score-data" id="score-player">0</td>
     </tr>
     <tr class="score-row">
-      <th class="score-header">computer</th>
-      <th class="score-header">tie</th>
-      <th class="score-header">player</th>
+      <th class="score-header">COMPUTER</th>
+      <th class="score-header">TIE</th>
+      <th class="score-header">PLAYER</th>
     </tr>
   </table>
   </div>
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-  <div class="message-middle">round 1</div>
+  <div class="message-middle">Round 1</div>
 
   <div class="player">
     <div class="player-buttons">
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <div class="message-bottom">choose your weapon</div>
+  <div class="message-bottom">Choose your weapon</div>
 
   <!-- Sound Effects -->
   <audio id="audioBGSwitch" src=" ./sounds/mixkit-arcade-game-jump-coin-216.wav"></audio>
