Add fontDefault class to body element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Odin Rock Paper Scissors</title>
 </head>
 
-<body>
+<body class="fontDefault">
   <table class="score">
     <tr class="score-row">
       <td class="score-data" id="score-computer">0</td>
