Rename id of 1 audio element

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="message-bottom">Choose your weapon</div>
 
   <!-- Sound Effects -->
-  <audio id="audioBGSwitch" src=" ./sounds/mixkit-arcade-game-jump-coin-216.wav"></audio>
+  <audio id="audioStyleSwitch" src="./sounds/mixkit-arcade-game-jump-coin-216.wav"></audio>
   <audio id="audioNoWinner" src="./sounds/mixkit-click-melodic-tone-1129.wav"></audio>
   <audio id="audioButtonOn" src="./sounds/mixkit-gear-fast-lock-tap-2857.wav"></audio>
   <audio id="audioButtonOn2" src="./sounds/mixkit-gear-metallic-lock-sound-2858.wav"></audio>
