Add 2 new audio elements

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
   <audio id="audioButtonOn2" src="./sounds/mixkit-gear-metallic-lock-sound-2858.wav"></audio>
   <audio id="audioComputerWin" src="./sounds/mixkit-opening-software-interface-2578.wav"></audio>
   <audio id="audioPlayerWin" src="./sounds/mixkit-video-game-retro-click-237.wav"></audio>
+  <audio id="audioPlayerWin2" src="./sounds/mixkit-small-win-2020.wav"></audio>
+  <audio id="audioPlayerWin3" src="./sounds/mixkit-video-game-win-2016.wav"></audio>
+
 
   <script src="script.js"></script>
 </body>
