Change audio files and rename element IDs

--- a/index.html
+++ b/index.html
@@ -46,13 +46,11 @@
 
   <!-- Sound Effects -->
   <audio id="audioStyleSwitch" src="./sounds/mixkit-arcade-game-jump-coin-216.wav"></audio>
+  <audio id="audioButtonOn" src="./sounds/mixkit-gear-metallic-lock-sound-2858.wav"></audio>
+  <audio id="audioComputerWin" src="./sounds/mixkit-software-interface-remove-2576.wav"></audio>
   <audio id="audioNoWinner" src="./sounds/mixkit-click-melodic-tone-1129.wav"></audio>
-  <audio id="audioButtonOn" src="./sounds/mixkit-gear-fast-lock-tap-2857.wav"></audio>
-  <audio id="audioButtonOn2" src="./sounds/mixkit-gear-metallic-lock-sound-2858.wav"></audio>
-  <audio id="audioComputerWin" src="./sounds/mixkit-opening-software-interface-2578.wav"></audio>
-  <audio id="audioPlayerWin" src="./sounds/mixkit-video-game-retro-click-237.wav"></audio>
-  <audio id="audioPlayerWin2" src="./sounds/mixkit-small-win-2020.wav"></audio>
-  <audio id="audioPlayerWin3" src="./sounds/mixkit-video-game-win-2016.wav"></audio>
+  <audio id="audioPlayerWinSmall" src="./sounds/mixkit-small-win-2020.wav"></audio>
+  <audio id="audioPlayerWinBig" src="./sounds/mixkit-video-game-win-2016.wav"></audio>
 
 
   <script src="script.js"></script>
